--- a/Pipfile
+++ b/Pipfile
@@ -4,12 +4,12 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-requests = "==2.28.1"
+requests = "*"
 importlib-metadata = "6.0.0"
 importlib-resources = "5.10.0"
-pytest = "7.1.3"
+pytest = "*"
 
 [dev-packages]
 
 [requires]
-python_full_version = "3.8.13"
+python_full_version = "*"
